--- a/Deployment.yaml
+++ b/Deployment.yaml
@@ -12,7 +12,7 @@ spec:
       maxSurge: 1
       maxUnavailable: 1
     type: RollingUpdate
-  templae:
+  template:
     metadata:
       labels:
         app: tomcat
